Fix image list loading layout bug
Fix bug when imageList has load images then
layout  is break for a second.
Movie scroll to top lite to center the page.
Image on image list now are more big

--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -1,7 +1,7 @@
 .page {
 	display: flex;
 	justify-content: center;
-	align-items: center;
+	align-content: flex-start;
 	flex-wrap: wrap;
 	background-color: #212020;
 	width: 100%;
