--- a/src/components/imagesList/imagesList.module.scss
+++ b/src/components/imagesList/imagesList.module.scss
@@ -42,7 +42,7 @@
 	}
 	@media (min-width: 1200px) {
 		width: 300px;
-		height: 180px;
+		height: 260px;
 	}
 
 	&::after {
