--- a/src/components/scrollOnTop/scrollOnTop.module.scss
+++ b/src/components/scrollOnTop/scrollOnTop.module.scss
@@ -1,6 +1,6 @@
 .buttonWrapper {
 	position: fixed;
-	right: 2rem;
+	right: 2.4rem;
 	bottom: 8rem;
 	padding: 0.5rem;
 	border: none;
